# gRPC-and-SOAP-benchmark

./: .gitignore  README.md
GRPC/GrpcCommunication/: CMakeLists.txt
GRPC/GrpcCommunication/BenchmarkTests/: CMakeLists.txt  benchmark_tests.cpp
GRPC/GrpcCommunication/Client/: CMakeLists.txt  Client.cpp  Client.h  ClientInfo.cpp  ClientInfo.h  main.cpp
GRPC/GrpcCommunication/Proto/: CMakeLists.txt
GRPC/GrpcCommunication/Proto/myproto/: TestFile.proto
GRPC/GrpcCommunication/Server/: CMakeLists.txt  Server.cpp  Server.h  ServerInfo.cpp  ServerInfo.h  main.cpp
SOAP-over-HTTP/HttpClient/: CMakeLists.txt  main.cpp
SOAP-over-HTTP/HttpClient/BenchmarkTests/: CMakeLists.txt  benchmark_tests.cpp
SOAP-over-HTTP/HttpClient/Domain/: CMakeLists.txt  SoapMessageCreator.cpp  SoapMessageCreator.h  XmlHandler.h  XmlParser.cpp  XmlParser.h  XmlStructures.h
SOAP-over-HTTP/HttpClient/Networking/: CMakeLists.txt  HttpsClient.cpp  HttpsClient.h
SOAP-over-HTTP/HttpServer/: CMakeLists.txt  main.cpp
SOAP-over-HTTP/HttpServer/Domain/: CMakeLists.txt  SoapMessageCreator.cpp  SoapMessageCreator.h  XmlHandler.cpp  XmlParser.cpp  XmlParser.h  XmlStructures.h
SOAP-over-HTTP/HttpServer/Networking/: CMakeLists.txt  HttpsServer.cpp  HttpsServer.h
